fix: Schluss align-items: center

--- a/sass/inhalt/ansprache/_schluss.sass
+++ b/sass/inhalt/ansprache/_schluss.sass
@@ -1,6 +1,9 @@
 #schluss
 	position: relative
 	overflow: hidden
+	display: flex
+	flex-direction: column
+	align-items: center
 	&::before, &::after
 		content: ""
 		position: absolute
